<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMB datacollector</string>

    <string name="global_input_mode_start">Start</string>
    <string name="global_input_mode_finish">Finish</string>

    <string name="main_database_file">Database file: %s</string>
    <string name="main_database_connection_NOK">Not connected to DB</string>
    <string name="main_database_connection_OK">Connected to DB</string>
    <string name="main_user_id">User ID: %d</string>
    <string name="main_device_id">Device ID: %d</string>
    <string name="main_current_raid_id">Current raid ID: %d</string>
    <string name="main_application_mode">Application mode: %s</string>
    <string name="main_input_data">Input data</string>
    <string name="main_transport">Transport</string>
    <string name="main_import_data">Import</string>
    <string name="main_import_barcode_data">Import barcodes</string>
    <string name="main_export_data">Export</string>
    <string name="main_title">MMB datacollector</string>
    <string name="main_results">Results</string>
    <string name="main_settings">Settings</string>
    <string name="main_fill_data">Fill test data</string>
    <string name="main_progress_loading">Loading...</string>

    <string name="settings_title">Settings</string>
    <string name="settings_path_to_db">DB file:</string>
    <string name="settings_select_db_file">Select file</string>
    <string name="settings_import_device_json">Import device.json</string>
    <string name="settings_device_id">Device ID:</string>
    <string name="settings_user_id">User ID:</string>
    <string name="settings_current_raid_id">Current raid ID:</string>
    <string name="settings_last_export_date">Last export:</string>
    <string name="settings_transp_user_id">Transport user ID:</string>
    <string name="settings_transp_user_password">Transport user password:</string>
    <string name="settings_team_clear_filter">Clear team filter after OK:</string>
    <string name="settings_team_fast_select">Fast team select:</string>
    <string name="settings_applied">Settings applied</string>
    <string name="settings_json_dialog_title">Select device</string>
    <string name="settings_application_mode">Application mode:</string>
    <string name="settings_application_mode_input">INPUT</string>
    <string name="settings_application_mode_report">REPORT</string>

    <string name="input_global_no_selected_scan_point">&lt;No input point selected></string>
    <string name="input_start_no_scan_point">&lt;No input point selected></string>
    <string name="input_start_select_scan_point">Select input point</string>
    <string name="input_start_work_with_logger">Work with barcode scanners</string>
    <string name="input_start_proceed_input">Input checkpoints and dismissed</string>

    <string name="input_scan_point_scan_point">Input point:</string>
    <string name="input_scan_point_prompt_scan_point">Select input point</string>
    <string name="input_scan_point_ok">OK</string>

    <string name="bluetooth_global_no_selected_device">&lt;No device selected></string>
    <string name="bluetooth_select_device_title">DEVICE:</string>
    <string name="bluetooth_select_device_prompt_device">Select device</string>
    <string name="bluetooth_select_device_ok">OK</string>

    <string name="input_global_no_selected_logger">&lt;No logger selected></string>
    <string name="input_bclogger_start_no_logger">&lt;No logger selected></string>
    <string name="input_bclogger_start_select_logger">Select logger</string>
    <string name="input_bclogger_start_settings">Logger settings</string>
    <string name="input_bclogger_start_load_data">Load data from logger</string>

    <string name="input_bclogger_settings_logger_id">LOGGER ID:</string>
    <string name="input_bclogger_settings_scanpoint">Scanpoint:</string>
    <string name="input_bclogger_settings_pattern">Pattern:</string>
    <string name="input_bclogger_settings_time">Time:</string>
    <string name="input_bclogger_settings_length_check">Check length</string>
    <string name="input_bclogger_settings_digits_check">Only digits</string>
    <string name="input_bclogger_settings_reload">Reload</string>
    <string name="input_bclogger_settings_send">Send</string>

    <string name="input_bclogger_dataload_get_log">Get datalog</string>
    <string name="input_bclogger_dataload_get_debug">Get errors</string>
    <string name="input_bclogger_dataload_clear_device">Clear device</string>
    <string name="input_bclogger_dataload_clear_console">Clear console</string>

    <string name="input_history_team_number">Team number:</string>
    <string name="input_history_team_not_found">Team [${teamNumber}] not found</string>

    <string name="input_data_no_team">&lt;No team selected></string>
    <string name="input_data_no_team_number">333</string>
    <string name="input_data_time_now">Now</string>
    <string name="input_data_check_all">Check all</string>
    <string name="input_data_check_nothing">Clear</string>
    <string name="input_data_no_result">&lt;Result undefined></string>
    <string name="input_data_ok">OK</string>
    <string name="input_data_res_start_time">Start time:</string>
    <string name="input_data_res_finish_time">Finish time:</string>
    <string name="input_data_res_missed">Missed:</string>
    <string name="input_data_res_taken">Checked:</string>
    <string name="input_data_date_error_message">Date ${inputDate} is not in interval [${dateFrom}, ${dateTo}].</string>
    <string name="input_data_withdraw_member">Withdraw</string>

    <string name="input_withdraw_no_team_number">333</string>
    <string name="input_withdraw_no_team">&lt;No team selected></string>
    <string name="input_withdraw_member_column">Member</string>
    <string name="input_withdraw_withdraw_column">Withdraw</string>
    <string name="input_withdraw_no_result">&lt;Result undefined></string>
    <string name="input_withdraw_ok">OK</string>
    <string name="input_withdraw_already_withdrawn">Already withdrawn</string>
    <string name="input_withdraw_res_members">Members to withdraw:</string>
    <string name="input_withdraw_res_no_members">&lt;Nobody selected></string>

    <string name="file_dialog_location">Location</string>
    <string name="file_dialog_cant_read_folder">folder can\'t be read!</string>
    <string name="file_dialog_new">New</string>
    <string name="file_dialog_select">Select</string>
    <string name="file_dialog_file_name">File name:</string>
    <string name="file_dialog_cancel">Cancel</string>
    <string name="file_dialog_create">Save</string>
    <string name="file_dialog_no_data">No Data</string>
    <string name="file_dialog_err">Error</string>

    <string name="transport_input_import_dictionaries">Import raid data</string>
    <string name="transport_input_send_to_server">Send RAW to server</string>
    <string name="transport_input_send_logger_data">Send RAW scans to reporter</string>
    <string name="transport_input_save_data_to_file">Save RAW to file</string>

    <string name="transport_report_import_dictionaries">Import raid data</string>
    <string name="transport_report_receive_from_server">Receive from server</string>
    <string name="transport_report_receive_logger_data">Receive scans data</string>

    <string name="transp_import_title">Import</string>
    <string name="transp_import_dicts_title">Import dictionaries</string>
    <string name="transp_import_barcode_title">Import barcode data</string>
    <string name="transp_import_barcode_select_scan_point">Select input point</string>
    <string name="transp_import_barcode_no_scan_point">&lt;No input point selected></string>
    <string name="transp_import_select_file">Select import file</string>
    <string name="transp_import_no_file_selected">&lt;No file selected></string>
    <string name="transp_import_start">Start</string>
    <string name="transp_import_stop">Stop</string>
    <string name="transp_import_current_table">Current table:</string>
    <string name="transp_import_no_table">&lt;Unknown></string>
    <string name="transp_import_rows_processed">Rows processed:</string>
    <string name="transp_import_no_rows">&lt;Unknown></string>

    <string name="transp_export_title">Export</string>
    <string name="transp_export_data_title">Export data</string>
    <string name="transp_export_data_full">Export full</string>
    <string name="transp_export_data_incremental">Export incremental</string>
    <string name="transp_export_data_last_export_date">Last export date:</string>
    <string name="transp_export_data_no_last_export">&lt;Unknown></string>
    <string name="transp_export_data_format_txt">TXT</string>
    <string name="transp_export_data_format_json">JSON</string>
    <string name="transp_export_error">Export failed.</string>
    <string name="transp_export_success">Export success.</string>
    <string name="transp_export_running">Running</string>

    <string name="transport_bclogger_receive_title">Receive LOGGER data</string>
    <string name="transport_bclogger_receive_start_listening">Start listening</string>
    <string name="transport_bclogger_receive_stop_listening">Stop listening</string>
    <string name="transport_bclogger_receive_clear_console">Clear console</string>

    <string name="transport_bclogger_send_title">Send LOGGER data</string>
    <string name="transport_bclogger_send_no_device">&lt;No report device selected></string>
    <string name="transport_bclogger_send_select_device">Select report device</string>
    <string name="transport_bclogger_send_send_data">Send data</string>
    <string name="transport_bclogger_send_clear_console">Clear console</string>

    <string name="results_team_report">Team report</string>
    <string name="results_group_report">Group report</string>

    <string name="report_team_title">Search team</string>
    <string name="report_team_refresh_data">Refresh teams</string>
    <string name="report_team_mode_fast">Fast mode</string>
    <string name="report_team_mode_usual">Usual mode</string>
    <string name="report_team_filter_clear">Clear filter</string>
    <string name="report_team_filter_hide">Hide filter</string>
    <string name="report_team_filter_show_number">Number filter</string>
    <string name="report_team_filter_show_full">Full filter</string>
    <string name="report_team_filter_number">Number:</string>
    <string name="report_team_filter_number_exact">Exact</string>
    <string name="report_team_filter_team">Team:</string>
    <string name="report_team_filter_member">Member:</string>
    <string name="report_team_sort_num">Num</string>
    <string name="report_team_sort_team">Team</string>
    <string name="report_team_sort_member">Member</string>
    <string name="report_team_filter_status_number">Number:</string>
    <string name="report_team_filter_status_exact">exact</string>
    <string name="report_team_filter_status_team">Team:</string>
    <string name="report_team_filter_status_member">Member:</string>
    <string name="report_team_filter_status_empty">No filter</string>
    <string name="report_team_result_error">Build team report failed.</string>

    <string name="report_global_title">Global report</string>
    <string name="report_global_all_teams">All teams</string>
    <string name="report_global_selected_teams">Selected teams</string>
    <string name="report_global_start_builder">Start</string>
    <string name="report_global_result_error">Build global report failed.</string>

    <string name="results_title">Result reports</string>

</resources>