<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/global_padding"
    android:paddingLeft="@dimen/global_padding"
    android:paddingRight="@dimen/global_padding"
    android:paddingTop="@dimen/global_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/transportBCLoggerSend_deviceLabel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/transport_bclogger_send_no_device"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/transportBCLoggerSend_selectDeviceBtn"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/transport_bclogger_send_select_device" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/transportBCLoggerSend_sendDataButton"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:text="@string/transport_bclogger_send_send_data" />

        <Button
            android:id="@+id/transportBCLoggerSend_clearConsoleButton"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:text="@string/transport_bclogger_send_clear_console" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/transportBCLoggerSend_consoleScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/global_padding"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/transportBCLoggerSend_consoleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:inputType="textMultiLine" />
    </ScrollView>
</LinearLayout>